# libuevent

./: Makefile.am  README  bootstrap  configure.ac  libuevent.pc.in
m4/: uevent.m4
src/: epoll.c  include.mk  kqueue.c  private.h  signalfd.c  uevent.c  uevent.h
